--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $ git checkout gh-pages
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>For any inquiries regarding the website and its contents, contact Jin Park at <a href="mailto:jinpark280@gmail.com">jinpark280@gmail.com</a>.</p>
       </section>
 
       <footer>
