--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $ git checkout gh-pages
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>For any inquiries regarding the website and its contents, contact Jin Park at <a href="mailto:jinpark280@gmail.com">jinpark280@gmail.com</a>.</p>
+<p>For any inquiries regarding the website and its contents, contact us at <a href="mailto:stampedosaurs@gmail.com">stampedosaurs@gmail.com</a>.</p>
       </section>
 
       <footer>
