--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-This is the Stampedosaurs BIOMOD Website
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Untitled Document</title>
+</head>
+
+<body>
+<p>Hello world. This is a test</p>
+<p>&nbsp;</p>
+<p>BLAH BLAH BLAH</p>
+</body>
+</html>
