--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+<style type="text/css">
+body,td,th {
+	font-size: 18px;
+	color: #FF0004;
+}
+</style>
 </head>
 
 <body>
-<p>Hello world. This is a test</p>
-<p>&nbsp;</p>
-<p>BLAH BLAH BLAH</p>
+<p><strong>This is the Stampedosaurs BIOMOD website!<br>
+</strong></p>
 </body>
 </html>
