--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-This is the Stampedosaurs BIOMOD Website
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Untitled Document</title>
+<style type="text/css">
+body,td,th {
+	font-size: 18px;
+	color: #FF0004;
+}
+</style>
+</head>
+
+<body>
+<p><strong>This is the Stampedosaurs BIOMOD website!<br>
+</strong><img src="216807-spidermeng.jpg" width="620" height="350" alt=""/></p>
+</body>
+</html>
