--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ body,td,th {
 
 <body>
 <p><strong>This is the Stampedosaurs BIOMOD website!<br>
-</strong><img src="216807-spidermeng.jpg" width="620" height="350" alt=""/></p>
+</strong><img src="images/216807-spidermeng.jpg" width="620" height="350" alt=""/></p>
 </body>
 </html>
