--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         
         <div id="nav">
         	<h3>Page Navigation</h3>
-            <a>Welcome</a>
-            <a>About</a>
-            <a>Contact</a>
+            <a href="index.html">Welcome</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </div>
         
         <div id="content">
