--- a/about.html
+++ b/about.html
@@ -2,6 +2,13 @@
 
 <p>Sample<br>Paragraph</p>
 
+<div id="nav">
+    <h3>Page Navigation</h3>
+    <a href="index.html">Welcome</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+</div>
+
 <ol>
     <li>Jin</li>
     <li>Tyler</li>
