--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,12 @@
 <h1>Contact Us</h1>
 
+<div id="nav">
+    <h3>Page Navigation</h3>
+    <a href="index.html">Welcome</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+</div>
+
 <p>Stampedosaurs</p>
 <p>Calgary, AB</p>
 <p>Canada</p>
