--- a/Sample/Design.html
+++ b/Sample/Design.html
@@ -1,7 +1,4 @@
-<h1>About Our Website</h1>
-
-<p>Sample<br>Paragraph</p>
-
+<h1>Design</h1>
 <div id="nav">
     <h3>Page Navigation</h3>
     <a href="index.html">Welcome</a>
@@ -9,11 +6,3 @@
     <a href="contact.html">Contact</a>
     <a href="Sample/Design.html">Design</a>
 </div>
-
-<ol>
-    <li>Jin</li>
-    <li>Tyler</li>
-    <li>Jeff</li>
-    <li>Manu</li>
-    <li>Joel</li>
-</ol>
