--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <a href="index.html">Welcome</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+    <a href="Sample/Design.html">Design</a>
 </div>
 
 <p>Stampedosaurs</p>
