--- a/Sample/Design.html
+++ b/Sample/Design.html
@@ -1,8 +1,8 @@
 <h1>Design</h1>
 <div id="nav">
     <h3>Page Navigation</h3>
-    <a href="index.html">Welcome</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="Sample/Design.html">Design</a>
+    <a href="../index.html">Welcome</a>
+    <a href="../about.html">About</a>
+    <a href="../contact.html">Contact</a>
+    <a href="Design.html">Design</a>
 </div>
