--- a/funny.html
+++ b/funny.html
@@ -1,7 +1,3 @@
-<h1>About Our Website</h1>
-
-<p>Sample<br>Paragraph</p>
-
 <div id="nav">
     <h3>Page Navigation</h3>
     <a href="index.html">Welcome</a>
@@ -11,10 +7,5 @@
     <a href="funny.html">Click For Awesomeness</a>
 </div>
 
-<ol>
-    <li>Jin</li>
-    <li>Tyler</li>
-    <li>Jeff</li>
-    <li>Manu</li>
-    <li>Joel</li>
-</ol>
+<h1>YA!</h1>
+<img src="images/216807-spidermeng.jpg" width="620" height="350" alt=""/>
