--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="Sample/Design.html">Design</a>
+            <a href="funny.html">Click For Awesomeness</a>
         </div>
         
         <div id="content">
