--- a/Sample/Design.html
+++ b/Sample/Design.html
@@ -5,4 +5,5 @@
     <a href="../about.html">About</a>
     <a href="../contact.html">Contact</a>
     <a href="Design.html">Design</a>
+    <a href="../funny.html">Click For Awesomeness</a>
 </div>
