--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="Sample/Design.html">Design</a>
+    <a href="funny.html">Click For Awesomeness</a>
 </div>
 
 <p>Stampedosaurs</p>
