--- a/Design.html
+++ b/Design.html
@@ -1,3 +1,4 @@
+<h1>Design</h1>
 <div id="nav">
     <h3>Page Navigation</h3>
     <a href="index.html">Welcome</a>
@@ -7,7 +8,3 @@
     <a href="https://www.facebook.com/pages/Stampedosaurs/1475780069306382">Stampedosaurs Facebook</a>
     <a href="funny.html">Click For Awesomeness</a>
 </div>
-
-
-<h1>YA!</h1>
-<img src="images/216807-spidermeng.jpg" width="620" height="350" alt=""/>
