--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <a href="index.html">Welcome</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="Sample/Design.html">Design</a>
+    <a href="Design.html">Design</a>
+    <a href="https://www.facebook.com/pages/Stampedosaurs/1475780069306382">Stampedosaurs Facebook</a>
     <a href="funny.html">Click For Awesomeness</a>
 </div>
 
