--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         
         <div id="nav">
         	<h3>Page Navigation</h3>
-            <a href="index.html">Welcome</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="Design.html">Design</a>
-            <a href="https://www.facebook.com/pages/Stampedosaurs/1475780069306382">Stampedosaurs Facebook</a>
-            <a href="funny.html">Click For Awesomeness</a>
+                <a href="index.html">Home</a>
+                <a href="project.html">Project</a>
+                <a href="youtube.html">YouTube</a>
+                <a href="notebook.html">Notebook</a>
+                <a href="team.html">Team</a>
+                <a href="aknowledgement.html">Aknowledgement</a>
         </div>
         
         <div id="content">
