--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         
         <div id="nav">
-        	<h3>Page Navigation</h3>
+        	    <!--Page Navigation-->
                 <a href="index.html">Home</a>
                 <a href="project.html">Project</a>
                 <a href="youtube.html">YouTube</a>
