--- a/project.html
+++ b/project.html
@@ -1,7 +1,7 @@
 <h1>Contact Us</h1>
 
 <div id="nav">
-    <h3>Page Navigation</h3>
+    	<!--Page Navigation-->
         <a href="index.html">Home</a>
         <a href="project.html">Project</a>
         <a href="youtube.html">YouTube</a>
