--- a/youtube.html
+++ b/youtube.html
@@ -3,7 +3,7 @@
 <p>Sample<br>Paragraph</p>
 
 <div id="nav">
-    <h3>Page Navigation</h3>
+        <!--Page Navigation-->
         <a href="index.html">Home</a>
         <a href="project.html">Project</a>
         <a href="youtube.html">YouTube</a>
