--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 
 <html>
-	<LINK href="css/styles.css" rel="stylesheet" type="text/css">
+	<LINK href="css/styles-main.css" rel="stylesheet" type="text/css">
 	<head>
     	<title>BIOMOD - Stampedosaurs Homepage</title>
     </head>
     
     <body>
     	<div id="banner">
-        	<h1>This is the banner area</h1>
+        	<img src="images/Revised Logo July 25_edited-2.png" height="259.5" width="462.5">
         </div>
         
         <div id="nav">
