--- a/project.html
+++ b/project.html
@@ -1,5 +1,5 @@
 <h1>Contact Us</h1>
-
+<LINK href="css/styles-project.css" rel="stylesheet" type="text/css">
 <div id="nav">
     	<!--Page Navigation-->
         <a href="index.html">Home</a>
