--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <h1>About Our Website</h1>
-
+<LINK href="css/styles-team.css" rel="stylesheet" type="text/css">
 <p>Sample<br>Paragraph</p>
 
 <div id="nav">
